--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
+    "lodash": "^4.17.21",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.52.2",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
   },
@@ -42,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "dotenv": "^16.0.1"
   }
 }
